# cgit-simple-authentication

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-cross.yml  build.yml
src/: authentication.rs  authentication_page.html  database.rs  datastructures.rs  main.rs  test.rs
