[package]
name = "cgit-simple-authentication"
version = "4.1.1"
authors = ["KunoiSayami <i@leanhe.dev>"]
edition = "2021"

[dependencies]
anyhow = "1"
argon2 = "0.5.0"
async-trait = "0.1"
base64 = "0.21.0"
clap = "4.0.15"
env_logger = "0.10.0"
handlebars = "4.3.5"
log = { version = "0.4", features = [
    "max_level_trace",
    "release_max_level_info",
] }
log4rs = "1"
pam = { version = "0.7.0", optional = true }
rand = "0.8.5"
rand_core = { version = "0.6", features = ["std"] }
redis = { version = "0.22.1", features = ["tokio-comp"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7.0-alpha.2", features = [
    "json",
    "sqlite",
    "runtime-tokio-rustls",
] }
tempdir = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
toml = "0.7.3"
url = "2.1"
uuid = { version = "1.2.1", features = ["v4"] }

[target.aarch64-unknown-linux-musl.dependencies]
cpufeatures = "0.2.5"

[profile.release]
lto = true
panic = "abort"

[features]
default = []
