[package]
name = "cgit-simple-authentication"
version = "4.2.0"
authors = ["KunoiSayami <i@leanhe.dev>"]
edition = "2024"

[dependencies]
anyhow = "1"
argon2 = "0.5.0"
async-trait = "0.1"
base64 = "0.22"
clap = "4"
env_logger = "0.11"
handlebars = "6.0"
log = { version = "0.4", features = [
    "max_level_trace",
    "release_max_level_info",
] }
log4rs = "1"
pam = { git = "https://github.com/1wilkens/pam.git", optional = true }
rand = "0.9"
redis = { version = "0.29", features = ["tokio-comp"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "json",
    "sqlite",
    "runtime-tokio-rustls",
] }
tempfile = "3"
itertools = "0.14"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
toml = "0.8"
url = "2.1"
uuid = { version = "1.2.1", features = ["v4"] }

[target.aarch64-unknown-linux-musl.dependencies]
cpufeatures = "0.2.5"

[profile.release]
lto = true
panic = "abort"

[features]
default = []
